# sqlc-hs

./: .gitignore  CHANGELOG.md  README.md  cabal.project  cabal.project.freeze  cabal.project.local  sqlc-hs.cabal  test.proto
.github/workflows/: release.yaml  wasm-build-test.yaml
app/: Main.hs
example/: Queries.hs  queries.cabal
example/Queries/: CreateAuthor.hs  DeleteAuthor.hs  GetAuthor.hs  ListAuthors.hs
sqlc-hs-prelude/Sqlc/Hs/: Prelude.hs
sqlc-hs-protos/Proto/Protos/: Codegen.hs  Codegen_Fields.hs
src/Sqlc/Hs/: Codegen.hs  Config.hs  Main.hs  NameTemplate.hs  Resolve.hs
templates/: internal.mysql.hs.jinja  internal.postgresql.hs.jinja  internal.sqlite.hs.jinja  package.cabal.jinja  query.hs.jinja  toplevel.hs.jinja  types.hs.jinja
test/Test/Sqlc/Hs/: Golden.hs
test/golden/: column-override-sqlite.input  column-override.input  empty.output  multiple-param-mentions.input  naming-templates.input  nested-module.input  nested-module.output  pulse.input  pulse.proto  simple-query-mysql.input  simple-query-mysql.output  simple-query-postgresql.input  simple-query-postgresql.output  simple-query-sqlite.input  simple-query-sqlite.output  simple-query.input  simple-query.output  slices.input
test/golden/column-override/: queries.cabal
test/golden/column-override-sqlite/: Queries.hs  column-override-sqlite.cabal
test/golden/column-override-sqlite/Queries/: GetLastErrors.hs
test/golden/column-override/Queries/: Internal.hs  ListUsers.hs
test/golden/empty/: Queries.hs  queries.cabal
test/golden/empty/Queries/: Internal.hs  Types.hs
test/golden/multiple-param-mentions/Queries/: ListUsers.hs
test/golden/naming-templates/: naming-templates.cabal
test/golden/naming-templates/Queries/: ListUsers.hs
test/golden/nested-module/: nested-module.cabal
test/golden/nested-module/Foo/: Bar.hs
test/golden/nested-module/Foo/Bar/: Internal.hs  Types.hs
test/golden/pulse/: pulse-db.cabal
test/golden/pulse/Pulse/: Database.hs
test/golden/pulse/Pulse/Database/: GetLoginById.hs  GetLoginByName.hs  GetLoginOrganizations.hs  GetOrganizations.hs  GetTeamById.hs  GetTeamByInvitationCode.hs  GetTeamByName.hs  GetTeamMembers.hs  GetTeams.hs  InsertTeam.hs  InsertTeamMember.hs  Internal.hs  Types.hs
test/golden/simple-query/: queries.cabal
test/golden/simple-query-mysql/: Queries.hs  simple-query-mysql.cabal
test/golden/simple-query-mysql/Queries/: Internal.hs  ListUsers.hs  Types.hs
test/golden/simple-query-postgresql/: simple-query-postgresql.cabal
test/golden/simple-query-postgresql/Queries/: Internal.hs  ListUsers.hs
test/golden/simple-query-sqlite/: Queries.hs  simple-query-sqlite.cabal
test/golden/simple-query-sqlite/Queries/: Internal.hs  ListUsers.hs  Types.hs
test/golden/simple-query/Queries/: ListUsers.hs
test/golden/slices/: Queries.hs  simple-query-postgresql.cabal
test/golden/slices/Queries/: Internal.hs  ListUsers.hs  Types.hs
