cabal-version: 3.0
name: pulse-db
version: 0.1.0.0
library
  build-depends:
    base,
    ghc-prim,
    postgresql-simple,
    text,
    time,
    vector,
  exposed-modules:
    Pulse.Database
    Pulse.Database.GetLoginById
    Pulse.Database.GetLoginByName
    Pulse.Database.GetLoginOrganizations
    Pulse.Database.GetOrganizations
    Pulse.Database.GetTeamById
    Pulse.Database.GetTeamByInvitationCode
    Pulse.Database.GetTeamByName
    Pulse.Database.GetTeamMembers
    Pulse.Database.GetTeams
    Pulse.Database.InsertTeam
    Pulse.Database.InsertTeamMember
    Pulse.Database.Internal
    Pulse.Database.Types
  default-extensions:
    NoFieldSelectors
