cabal-version: 3.0
name: simple-query-sqlite
version: 0.1.0.0
library
  build-depends:
    base,
    bytestring,
    sqlite-simple,
    text,
    vector,
  exposed-modules:
    Queries
    Queries.Internal
    Queries.ListUsers
    Queries.Types
  default-extensions:
    OverloadedStrings
    StrictData
